src/internal/codegen/snapshots/hebi__internal__codegen__tests__call_n.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
f(0, 1, 2)

# Func:
function `main` (registers: 5, length: 20, constants: 1)
.code
  0  | load_global [0]; f
  2  | store r1
  4  | load_smi 0
  6  | store r2
  8  | load_smi 1
  10 | store r3
  12 | load_smi 2
  14 | store r4
  16 | call r1, 3
  19 | return



