src/internal/codegen/snapshots/hebi__internal__codegen__tests__class_in_nested_scope_with_closure_method.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
fn test():
  u := 0
  class T:
    v = 0
    fn test(self):
      print self.v, u


# Func:
function `T.test` (registers: 3, length: 14, constants: 1)
.upvalues
  0 <- r1
.code
  0  | load_self
  1  | load_field [0]; v
  3  | store r1
  5  | load_upvalue ^0
  7  | store r2
  9  | print_n r1, 2
  12 | load_none
  13 | return


function `test` (registers: 3, length: 15, constants: 1)
.code
  0  | load_smi 0
  2  | store r1
  4  | load_smi 0
  6  | store r2
  8  | make_data_class [0], r2; <class `T` descriptor>
  11 | store r2
  13 | load_none
  14 | return


function `main` (registers: 1, length: 5, constants: 2)
.code
  0 | make_fn [0]; <function `test` descriptor>
  2 | store_global [1]; test
  4 | return



