src/internal/codegen/snapshots/hebi__internal__codegen__tests__class_with_field.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
class T:
  v = 0


# Func:
function `main` (registers: 2, length: 10, constants: 2)
.code
  0  | load_smi 0
  2  | store r1
  4  | make_data_class [0], r1; <class `T` descriptor>
  7  | store_global [1]; T
  9  | return



